--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             
     <img src="1.png" alt="" style="width: 250; height: 400;">
     
-    <!-- <img src="menu2.jpg" alt="" style="width: 250; height: 400;"> -->
+    <img src="2.png" alt="" style="width: 250; height: 400;">
 
 </body>
 </html>
