--- a/index.html
+++ b/index.html
@@ -33,5 +33,7 @@
         margin: 0px;
         max-width: 100%;
         height: auto;
+        margin-left: 0%;
+        margin-right: 0%;
     }
 </style>
